# shell-history-analysis

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  Makefile  README.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: python.yaml
requirements/: ci.in  ci.txt  dev.txt
shell_history_analysis/: __init__.py  analyze.py  cli.py  grouping.yaml  shell_io.py
tests/: test_shell_io.py
