[metadata]
# https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
name = shell_history_analysis

author = Martin Thoma
author_email = info@martin-thoma.de
maintainer = Martin Thoma
maintainer_email = info@martin-thoma.de

# keep in sync with shell_history_analysis/_version.py
version = 0.1.2

description = Analyze the history of a shell
long_description = file: README.md
long_description_content_type = text/markdown
keywords = utility,

platforms = Linux

url = https://github.com/MartinThoma/shell-history-analysis
download_url = https://github.com/MartinThoma/shell-history-analysis

license = MIT
classifiers =
        Development Status :: 3 - Alpha
        Environment :: Console
        Intended Audience :: Developers
        Intended Audience :: Information Technology
        License :: OSI Approved :: MIT License
        Natural Language :: English
        Programming Language :: Python :: 3.6
        Programming Language :: Python :: 3.7
        Programming Language :: Python :: 3.8
        Topic :: Software Development
        Topic :: Utilities

[options]
zip_safe = True
packages = find:

[options.entry_points]
console_scripts =
    shell_history_analysis = shell_history_analysis.cli:entry_point

[tool:pytest]
addopts = --doctest-modules --mccabe --cov=./shell_history_analysis --cov-append --cov-report html:tests/reports/coverage-html --cov-report xml:tests/reports/coverage.xml --cov-report term --flake8 --ignore=docs/ --durations=3
doctest_encoding = utf-8
mccabe-complexity=10

[pydocstyle]
match_dir = shell_history_analysis
ignore = D105, D413, D107, D416, D212, D203, D417

[flake8]
exclude = tests/
ignore = H301, H306, H404, H405, W503, D105, D413, D103, D107, E203

[mutmut]
backup=False
runner=python3 -m pytest
tests_dir=tests/
